--- a/AaronDemo/app/src/main/AndroidManifest.xml
+++ b/AaronDemo/app/src/main/AndroidManifest.xml
@@ -2,20 +2,28 @@
 <manifest package="com.aaron.aarondemo"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+
     <application
+        android:name=".AaronApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".activitys.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".CheckNetConActivity"/>
+        <activity android:name=".activitys.EscapeActivity"/>
+        <activity android:name=".activitys.CheckNetConActivity"/>
+        <activity android:name=".activitys.CheckSystemToolsActivity"/>
+        <activity android:name=".activitys.floatwindon.FloatWindons1Activity"/>
+        <service android:name=".services.FxService"/>
+        <activity android:name=".activitys.floatwindon.FloatWindons2Activity"/>
     </application>
 
 </manifest>
