--- a/AaronDemo/aaronTools/src/main/AndroidManifest.xml
+++ b/AaronDemo/aaronTools/src/main/AndroidManifest.xml
@@ -16,4 +16,6 @@
 
     <uses-permission android:name="android.permission.RECEIVE_SMS"/>
     <uses-permission android:name="android.permission.READ_SMS"/>
+    <uses-permission android:name="android.permission.DELETE_PACKAGES"/>
+
 </manifest>
