创建通知，和闹铃

--- a/AaronDemo/aaronTools/src/main/AndroidManifest.xml
+++ b/AaronDemo/aaronTools/src/main/AndroidManifest.xml
@@ -17,5 +17,7 @@
     <uses-permission android:name="android.permission.RECEIVE_SMS"/>
     <uses-permission android:name="android.permission.READ_SMS"/>
     <uses-permission android:name="android.permission.DELETE_PACKAGES"/>
+    <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES"/>
+    <uses-permission android:name="android.permission.DEFAULT_VIBRATE"/>
 
 </manifest>
