--- a/AaronDemo/app/src/main/AndroidManifest.xml
+++ b/AaronDemo/app/src/main/AndroidManifest.xml
@@ -21,6 +21,8 @@
         <activity android:name=".activitys.EscapeActivity"/>
         <activity android:name=".activitys.CheckNetConActivity"/>
         <activity android:name=".activitys.systems.CheckSystemToolsActivity"/>
+        <service android:name=".services.LongRunningService"/>
+        <receiver android:name=".services.LongRunningService$AlarmReceiver" android:process=":remote"/>
         <activity android:name=".activitys.systems.AppListActivity"/>
         <activity android:name=".activitys.floatwindon.FloatWindons1Activity"/>
         <service android:name=".services.FxService"/>
